--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,5 +17,10 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
     }
 }
+plugins {
+    // ...
+    // Add the dependency for the Google services Gradle plugin
+    id 'com.google.gms.google-services' version '4.4.4' apply false
 
+}
 apply plugin: "com.facebook.react.rootproject"
