--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-maps": "^1.26.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -21,14 +22,15 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.5",
-    "@react-native/eslint-config": "0.76.5",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^23.5.0",
     "@react-native-firebase/auth": "^23.5.0",
+    "@react-native/babel-preset": "0.76.5",
+    "@react-native/eslint-config": "0.76.5",
     "@react-native/metro-config": "0.76.5",
+    "@react-native/typescript-config": "0.76.5",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
-    "@react-native/typescript-config": "0.76.5",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
@@ -37,7 +39,10 @@
     "lottie-react-native": "^6.7.0",
     "prettier": "2.8.8",
     "react-native-biometrics": "^3.0.1",
-    "react-native-maps": "1.15.9",
+    "react-native-gesture-handler": "^2.23.1",
+    "react-native-reanimated": "^3.16.0",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^3.35.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
